--- a/public/test.css
+++ b/public/test.css
@@ -143,7 +143,7 @@
 	#cto {
 		height: 6em;
 		width: 20rem;
-		background-color: greenyellow;
+		background-color: green;
 		border-radius: 20px;
 		display: block;
 	}
@@ -206,6 +206,7 @@
 
 	button {
 		border-radius: 2rem;
-		background-color: greenyellow;
+		background-color: green;
 	}
 }
+
